v1.8 (XXXX-XX-XX)
=================

- Turn on NFWPotential physical output when initializing using the 
  virial mass mvir (see #465)

- Allow actions to be computed for Orbit instances with actionAngle
  methods that don't compute frequencies.

v1.7.1 (2021-11-17)
===================

- Main reason for this minor version is	to add a Python	3.10 wheel

v1.7 (2021-07-04)
=================

- Added a general framework for spherical distribution function as
  well as a general implementation of (a) the Eddington inversion to
  obtain the ergodic distribution function, (b) the equivalent
  inversion to get the Osipkov-Merritt-style anisotropy, and (c) the
  Cuddeford inversion to obtain a distribution function with constant
  anisotropy, all three for any spherical density in any spherical
  potential (where it exists). Also added the distribution function of
  a few well-known distribution functions, including (a) Hernquist
  distribution functions that are isotropic, have constant anisotropy,
  or have Osipkov-Merritt type anisotropy; (b) an isotropic Plummer
  profile; (c) the isotropic NFW profile (either using the
  approx. from Widrow 2000 or using an improved approximation) and the
  Osipkov-Merritt NFW profile (new approximate form); (d) the King
  model (also added as a potential as KingPotential). These
  distribution functions can be evaluated and sampled, and their
  velocity moments can be computed. Work started in #432 and continued
  on from there. Distribution functions with constant anisotropy
  require the JAX.

- Implemented the calculation of SCF density/potential expansion
  coefficients based on an N-body representation of the density
  (#444).

- Added NFWPotential initialization method using rmax and vmax, the
  radius and alue at which the rotation curve peaks; also added rmax
  and vmax methods to NFWPotential to compute these quantities for any
  NFWPotential.

- Added general class SphericalPotential to make defining spherical